# kdeexamples

./: CMakeLists.txt  CTestConfig.cmake  KDEExamplesNightly.cmake  README  README.unmaintained  appletselector.cpp  appletselector.h  containmentshell.cpp  containmentshell.h  main.cpp  mainwindow.cpp  mainwindow.h  plasma-kpart-shell.desktop  plasma-kpart-shell.rc  plasma-kpart-shellui.rc  testshellpluginloader.cpp  testshellpluginloader.h
KCM/: CMakeLists.txt  kinfocenter_example.cpp  kinfocenter_example.h  kinfocenterexample.desktop
attica/: README  (+1 more)
attica/example/: CMakeLists.txt  contentcreation.ui  contentdownload.h  main.cpp  mainwindow.cpp  mainwindow.h  person.h  person.ui  privatedata.cpp  simplepersonrequest.h
attica/opencollaborationexample/: CMakeLists.txt  contentcreation.ui  contentdownload.ui  person.cpp  privatedata.cpp  privatedata.h  privatedata.ui
authorization/: CMakeLists.txt  mainwindow.cpp
authorization/helper/: helper.cpp
authorization/kauth_example/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
authorization/kauth_example/helper/: helper.cpp  helper.h
authorization/kwalletdemo/: CMakeLists.txt  README  dialog.cpp  dialog.h  main.cpp
buildsystem/HowToInstallALibrary/: BarConfig.cmake.in  BarConfigVersion.cmake.in  CMakeLists.txt  README
buildsystem/HowToInstallALibrary/example/: CMakeLists.txt  main.c
buildsystem/HowToInstallALibrary/src/: CMakeLists.txt  bar.c  bar.h
framework-template/: CMakeLists.txt  KF5FooBarConfig.cmake.in  Messages.sh  README.md  setup.sh  test-setup.sh
framework-template/autotests/: CMakeLists.txt
framework-template/src/: CMakeLists.txt  Messages-i18n.sh  Messages-qt.sh  Messages.sh
framework-template/tests/: CMakeLists.txt
kconfigxt/: CMakeLists.txt  exampleprefs_base.kcfgc
kcontrolmodules/: CMakeLists.txt  kcontrolmodule_example.cpp  kcontrolmodule_example.h  kinfocenterexample.desktop  systemsettingsexample.desktop
kdedemo/: CMakeLists.txt  examples.xml  kdedemo.cpp  kdedemo.h  plasma-applet-kdedemo.desktop  xmlhandler.cpp  xmlhandler.h
kdeui/kdeuiwidgets/: CMakeLists.txt  README  mainwindow.h
kdeui/kmessagewidget/: CMakeLists.txt  main.cpp
kdeui/kpartbasic/: CMakeLists.txt  README  main.cpp  mainwindow.cpp  mainwindow.h
kdeui/kxmlguibasic/: CMakeLists.txt  README  main.cpp  mainwindow.h
kdevplatform/projectview/: CMakeLists.txt  kdevprojectview.desktop  kdevprojectview.desktop.in  projectview.kdev4  projectviewplugin.cpp  projectviewplugin.h
kicons/: CMakeLists.txt  README  hisc-apps-tutorial-kicon.svgz  main.cpp  mainwindow.cpp  mainwindow.h  tutorial-kiconui.rc
kidletime/: CMakeLists.txt
kio/simple-ftp-browser/: CMakeLists.txt  README  browser.cpp  browser.h  main.cpp
knewstuff/updatechecker/: CMakeLists.txt  README  main.cpp  updatechecker.cpp  updatechecker.h
knewstuff/updatechecker/src/: CMakeLists.txt  main.cpp  updatechecker.cpp  updatechecker.h
kross/basic/: CMakeLists.txt  hello.js  hello.py  main.cpp  mainwindow.cpp
kross/krosshello/: CMakeLists.txt  README  hello.rb  mainwindow.cpp  mainwindow.h
kross/signal-slot/: CMakeLists.txt  main.cpp  mainwindow.cpp
kwallet/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp
nepomuk/metadata/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
nepomuk/query/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
phonon/: CMakeLists.txt  README
phonon/basicaudioplayer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
phonon/outputselectordemo/: CMakeLists.txt  outputselector.cpp
plasma/: CMakeLists.txt
plasma/animation/: pltest.h
plasma/c++/: CMakeLists.txt
plasma/c++/dataengines/: CMakeLists.txt
plasma/c++/dataengines/customDataContainers/: CMakeLists.txt
plasma/c++/dataengines/simpleEngine/: CMakeLists.txt  simpleEngine.h
plasma/c++/dataengines/sourcesOnRequest/: CMakeLists.txt  sourcesOnRequest.h
plasma/c++/kpart/: CMakeLists.txt  appletselector.h  containmentshell.cpp  plasma-example-kpart-shell.desktop
plasma/c++/plasmoids/: CMakeLists.txt
plasma/c++/plasmoids/animation/: CMakeLists.txt  (+3 more)
plasma/c++/qml/: CMakeLists.txt  example-qmlapp.desktop
plasma/c++/runner/: CMakeLists.txt  homefilesrunner.cpp
plasma/declarative/: CMakeLists.txt
plasma/declarative/addons/: metadata.desktop
plasma/declarative/helloworld/: metadata.desktop
plasma/declarative/pairsgame/: PairsCanvas.qml
plasma/declarative/qmltasks/: metadata.desktop
plasma/declarative/wallpapers/: CMakeLists.txt
plasma/declarative/widgetgallery/: widgetgallery-tablet
plasma/javascript/: CMakeLists.txt  CONTENTS  LICENSING
plasma/javascript/plasma-shell-scripting/: containmentIds.js  createPanel.js  findingApplications.js  findingPaths.js  listWidgetConfigValues.js  listingPanelsActivitiesAndAvailablePlugins.js  listingWallpaperPlugins.js  manipulatePanel.js  removeSystrayApplet.js  setWallpaper.js  showConfig.js  swapWidgets.js
plasma/javascript/plasmoids/: CMakeLists.txt  LICENSING
plasma/plasma-desktop-scripting/: addAndMoveWidget.js  containmentIds.js  listWidgetConfigValues.js  listingPanelsAcitivitesAndAvailablePlugins.js  manipulatePanel.js  swapWidgets.js
plasma/plasmoids/: CMakeLists.txt
plasma/plasmoids/animation/: CMakeLists.txt  PlasmaAnimationExample.cpp  plasma-applet-example-animation.desktop  plasma-applet-pltest.desktop  pltest.cpp
plasma/python/applets/: CMakeLists.txt
plasma/ruby/applets/: CMakeLists.txt
solid/: CMakeLists.txt  README
solid/hardwareinfo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
solid/minibrowser/: CMakeLists.txt  main.cpp
solid/notifierdemo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
solid/soliddemo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
solid/tutorial1/: CMakeLists.txt  tutorial1.cpp
solid/tutorial2/: CMakeLists.txt  tutorial2.cpp
solid/tutorial3/: CMakeLists.txt  tutorial3.cpp
solid/tutorial4/: CMakeLists.txt  tutorial4.cpp
solid/tutorial5/: CMakeLists.txt  tutorial5.cpp
solid/tutorial6/: CMakeLists.txt  webcamwatcher.cpp  webcamwatcher.h
solid/tutorial7/: CMakeLists.txt  tutorial7.cpp
(+212 files in other folders)
