cmake_minimum_required(VERSION 2.6.2 FATAL_ERROR)

project(kdeexamples)

add_subdirectory(attica)
add_subdirectory(authorization)
add_subdirectory(kconfigxt)
add_subdirectory(kidletime)
add_subdirectory(kwallet)
add_subdirectory(phonon)
add_subdirectory(plasma)
add_subdirectory(solid)
add_subdirectory(kcontrolmodules)
