cmake_minimum_required(VERSION 2.6.2 FATAL_ERROR)

install(FILES README DESTINATION ${DATA_INSTALL_DIR}/kdeexamples/solid)

add_subdirectory(hardwareinfo)
add_subdirectory(minibrowser)
add_subdirectory(notifierdemo)
add_subdirectory(soliddemo)
add_subdirectory(tutorial1)
add_subdirectory(tutorial2)
add_subdirectory(tutorial3)
add_subdirectory(tutorial4)
add_subdirectory(tutorial5)
add_subdirectory(tutorial6)
add_subdirectory(tutorial7)
